# sandbox-2

./: .gitmodules  README.md
Assimp/Assimp1/: .gitignore  CMakeLists.txt  Readme.md  main.cpp
Assimp/Assimp2/: CMakeLists.txt  compile-and-run.bat  main.cpp
Audio/: .gitignore  README.md
Audio/src/: Body.h  Color.h  DrawBatch.h  Easing.h  GL.cpp  Image.cpp  Logger.cpp  Main.cpp  Math.h  Mesh.h  Music.cpp  Music.h  Physics.cpp  Physics.h  Quad.h  Scene.h  Shader.h  Sound.cpp  Sound.h  Stopwatch.cpp  Stopwatch.h  Texture.cpp  TextureSheet.cpp  Transform.cpp  Triangle.cpp
Audio/src/Android/: AndroidAudio.cpp  AndroidAudio.h  Java.cpp  Java.h  MusicImpl.cpp  MusicImpl.h
Audio/src/Windows/: MusicImpl.cpp  MusicImpl.h
Audio/tools/: logcat_emulator.bat
Audio2/Miniaudio/: .gitignore  sfml-license.md
Audio2/Miniaudio/Documents/: AndroidFileAccess.md
Audio2/Miniaudio/EngineExample/: Readme.md  main.cpp
Audio2/SDL2Miniaudio/: README.md
Audio2/SDL2Miniaudio/docs/: Notes.md
Audio2/SDL2Miniaudio/docs/Artwork/: Naming Semantics.md
Audio2/SDL2Miniaudio/src/: .gitignore  Asset.cpp  Asset.h  Backdrop.cpp  Backdrop.h  Block.cpp  Block.h  BlockType.h  Board.cpp  Board.h  BoardCollisionLogic.cpp  BoardCollisionLogic.h  Box.h  Camera.cpp  Camera.h  CameraDemo1.cpp  CameraDemo1.h  Color.h  DemoSandbox.cpp  DrawStates.h  Drawable.h  GL.cpp  GameAssets.cpp  GameAssets.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Main.cpp  Math.h  Memory.h  ParticleSystem.cpp  ParticleSystem.h  Physics.cpp  PrimitiveType.h  Rect.h  Renderer.cpp  SDL.h  Scene.cpp  Scene.h  (+36 more)
Audio2/SDL2Miniaudio/src/Android/: AndroidAudio.h  Java.cpp  Java.h  MusicImpl.cpp  MusicImpl.h
CMake/Test1/: .gitignore  Readme.md
CMake/Test1/o2-pong/: CMakeLists.txt  CMakeSettings.json
CMake/Test1/o2-pong/source/: CMakeLists.txt  CMakeSettings.json
CMake/Test1/o2-pong/source/o2-pong/: CMakeLists.txt  main.cpp
CMake/Test2/o2-pong/: CMakeLists.txt
CMake/Test3/: .gitignore  Readme.md
CMake/Test3/o2-pong/: CMakeLists.txt
CMake/Test3/o2-pong/source/: main.cpp
CMake/Test4/: CMakeLists.txt
CMake/Test4/src/: CMakeLists.txt  main.cpp
CMake/Test4/tests/: CMakeLists.txt
CrossPlatform/: .gitignore  Readme.md
CrossPlatform/Emscripten1/: .gitignore  Readme.md  compile-and-run.bat  main.cpp  open-emscripten-shell.bat  uninstall-emscripten.bat
CrossPlatform/Emscripten1/tools/: open-emscripten-shell.bat
CrossPlatform/Emscripten2/: .gitignore  Readme.md  compile-and-run.bat
CrossPlatform/Experiment1/: Readme.md
CrossPlatform/Experiment1/distribution/: Readme.md
CrossPlatform/Experiment1/gradle/wrapper/: gradle-wrapper.properties
CrossPlatform/Experiment2/: Readme.md
CrossPlatform/Experiment2/app/: build.gradle
CrossPlatform/Experiment2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CrossPlatform/Experiment3/: .gitignore
CrossPlatform/Experiment4/: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md  main.cpp
CrossPlatform/Experiment4/calculator/: CMakeLists.txt  calc.cpp
CrossPlatform/Experiment4/source/: CMakeLists.txt  main.cpp
CrossPlatform/Experiment5/: Readme.md
CrossPlatform/Experiment5/android-project/: build.gradle  gradle.properties
CrossPlatform/Experiment5/android-project/app/: build.gradle
CrossPlatform/Experiment6/: Readme.md
CrossPlatform/Experiment6/demo/: CMakeLists.txt  main.cpp
CrossPlatform/Experiment6/source/: CMakeLists.txt
Patterns/: README.md
Patterns/Bootstrap/: LICENSE  Readme.md
Patterns/Bootstrap/src/: Animation.h  Asset.cpp  Backdrop.cpp  Backdrop.h  Block.cpp  Block.h  BlockCollisionEffect.cpp  BlockCollisionEffect.h  BlockExplosion.cpp  BlockExplosion.h  Board.cpp  Board.h  Border.cpp  Border.h  Boundable.h  Box.cpp  BubbleEffect.cpp  BubbleEffect.h  Camera.cpp  Camera.h  Demo.cpp  Demo.h  DrawBatch.cpp  DrawTarget.cpp  Easing.h  GL.h  Game.cpp  Game.h  Grid.cpp  Grid.h  Image.cpp  Input.cpp  Input.h  LibraryV1.cpp  LibraryV1.h  LibraryV2.cpp  LibraryV2.h  Light.h  Line.cpp  Line.h  (+35 more)
Patterns/Bootstrap/src/Android/: AndroidAudio.cpp  Java.cpp  MusicImpl.cpp  MusicImpl.h
Patterns/Bootstrap/src/Windows/: MusicImpl.cpp  MusicImpl.h
Patterns/Bootstrap/src/v1/: Library.cpp  Library.h
Patterns/Reflection/: .gitignore  Reflection.sln
Patterns/Reflection/Reflection/: Main.cpp  Reflection.vcxproj
Patterns/Sfinae/: Sfinae.sln
Patterns/Sfinae/Sfinae/: Sfinae.cpp  Sfinae.vcxproj  Sfinae.vcxproj.filters
Patterns/src/: Asset.cpp  Asset.h  Camera.cpp  Camera.h  Disk.h  DrawStates.h  GL.h  Image.h  Input.h  KeyCode.h  Logger.h  Main.cpp  Memory.h  Renderer.h  SDL.h  Shader.cpp  Shape.h  Sprite.cpp  Texture.h  TextureSheet.h  Transform.h  Transformable.cpp  Tween.cpp  Window.cpp
Reflection/docs/: Concept.cpp  Concept2.cpp  Diego.cpp  Inheritance.cpp
Reflection/src/: BaseProperty.h  BaseReflectable.h  Demo1.cpp  Demo1.h  Demo10.cpp  Demo10.h  Demo2.cpp  Demo2.h  Demo3.cpp  Demo3.h  Demo4.cpp  Demo4.h  Demo5.cpp  Demo5.h  Demo6.cpp  Demo6.h  Demo7.cpp  Demo7.h  Demo8.cpp  Demo8.h  Demo9.cpp  Demo9.h  Disk.cpp  DrawBatch.cpp  DrawStates.cpp  DrawTarget.cpp  DrawTarget.h  Drawable.h  InheritanceCheck.h  Input.cpp  IntRect.h  Macro.h  Main.cpp  Main.cpp.bak  ParticleSystem.cpp  ParticleSystem.h  PrimitiveType.h  Property.h  Quad.cpp  Reflectable.h  (+12 more)
Reflection/tools/: logcat.bat
RuntimeReflection/Docs/Ideas/: Reflection.cpp  Reflection2.cpp
RuntimeReflection/RuntimeReflection/: RuntimeReflection.cpp  RuntimeReflection.sln  RuntimeReflection.vcxproj  RuntimeReflection.vcxproj.filters
Various/: README.md
Various/docs/: Concept.cpp  Concept2.cpp  Diego.cpp  Inheritance.cpp
Various/src/: Asset.cpp  Asset.h  BaseProperty.h  BaseReflectable.h  Body.h  Camera.cpp  Camera.h  Color.h  Demo1.cpp  Demo1.h  Demo10.cpp  Demo10.h  Demo2.cpp  Demo2.h  Demo3.cpp  Demo3.h  Demo4.cpp  Demo4.h  Demo5.cpp  Demo5.h  Demo6.cpp  Demo6.h  Demo7.cpp  Demo7.h  Demo8.cpp  Demo8.h  Demo9.cpp  Demo9.h  Disk.cpp  Disk.h  DrawBatch.h  DrawStates.cpp  DrawTarget.h  Easing.h  Image.h  InheritanceCheck.h  Input.cpp  IntRect.h  KeyCode.h  Logger.h  (+31 more)
(+19 files in other folders)
