# Fügen Sie hier die Quelldateien Ihrer Anwendung hinzu
#add_executable(app main.cpp)

# Fügen Sie das Verzeichnis für die externen Bibliotheken hinzu
#target_include_directories(app PRIVATE ${CMAKE_SOURCE_DIR}/third-party/profiler/src)

# Verknüpfen Sie die Anwendung mit der Profiler-Bibliothek
#target_link_libraries(app PRIVATE profiler)